test/tests/operators/load_balance/error_empty_list.txt
error: expected list to not be empty
 --> tests/operators/load_balance/error_empty_list.tql:7:14
  |
7 | load_balance $over {
  |              ^^^^^ 
  |
